duylinhloi/refactor-layout

--- a/app/styles/reset.css
+++ b/app/styles/reset.css
@@ -83,12 +83,12 @@ body > main {
   margin: 0;
 }
 
-section {
+/* section {
   padding: 1rem 0;
   @media (min-width: 768px) {
     padding: 2rem 0;
   }
-}
+} */
 
 fieldset {
   display: flex;
