--- a/app/styles/fonts.css
+++ b/app/styles/fonts.css
@@ -1,69 +1,69 @@
 @font-face {
   font-family: 'Satoshi';
-  src: url('/fonts/Satoshi-Light.woff2') format('woff2');
+  src: url('/fonts/Satoshi-Light.ttf') format('ttf');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: 'Satoshi';
-  src: url('/fonts/Satoshi-LightItalic.woff2') format('woff2');
+  src: url('/fonts/Satoshi-LightItalic.ttf') format('ttf');
   font-weight: 300;
   font-style: italic;
   font-display: swap;
 }
 @font-face {
   font-family: 'Satoshi';
-  src: url('/fonts/Satoshi-Regular.woff2') format('woff2');
+  src: url('/fonts/Satoshi-Regular.ttf') format('ttf');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: 'Satoshi';
-  src: url('/fonts/Satoshi-Italic.woff2') format('woff2');
+  src: url('/fonts/Satoshi-Italic.ttf') format('ttf');
   font-weight: 400;
   font-style: italic;
   font-display: swap;
 }
 @font-face {
   font-family: 'Satoshi';
-  src: url('/fonts/Satoshi-Medium.woff2') format('woff2');
+  src: url('/fonts/Satoshi-Medium.ttf') format('ttf');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: 'Satoshi';
-  src: url('/fonts/Satoshi-MediumItalic.woff2') format('woff2');
+  src: url('/fonts/Satoshi-MediumItalic.ttf') format('ttf');
   font-weight: 500;
   font-style: italic;
   font-display: swap;
 }
 @font-face {
   font-family: 'Satoshi';
-  src: url('/fonts/Satoshi-Bold.woff2') format('woff2');
+  src: url('/fonts/Satoshi-Bold.ttf') format('ttf');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: 'Satoshi';
-  src: url('/fonts/Satoshi-BoldItalic.woff2') format('woff2');
+  src: url('/fonts/Satoshi-BoldItalic.ttf') format('ttf');
   font-weight: 700;
   font-style: italic;
   font-display: swap;
 }
 @font-face {
   font-family: 'Satoshi';
-  src: url('/fonts/Satoshi-Black.woff2') format('woff2');
+  src: url('/fonts/Satoshi-Black.ttf') format('ttf');
   font-weight: 900;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: 'Satoshi';
-  src: url('/fonts/Satoshi-BlackItalic.woff2') format('woff2');
+  src: url('/fonts/Satoshi-BlackItalic.ttf') format('ttf');
   font-weight: 900;
   font-style: italic;
   font-display: swap;
