feature/shop_farbric

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -15,6 +15,8 @@
   --color-functional-positive: #71e38a;
   --color-functional-caution: #f2db5c;
   --color-neutral-5: #323232;
+  --color-neutral-3: #666666;
+  --color-neutral-0: #B4B4B4;
   --font-inter: "Inter", "sans-serif";
   --max-width-container-xl: 1920px;
 }
