feature/pillow-case-page

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -17,6 +17,8 @@
   --color-neutral-5: #323232;
   --color-neutral-3: #666666;
   --color-neutral-0: #B4B4B4;
+  --color-neutral-1: #EADFD5;
+  --color-positive-green: #71E38A;
   --font-inter: "Inter", "sans-serif";
   --max-width-container-xl: 1920px;
 }
