--- a/app/styles/reset.css
+++ b/app/styles/reset.css
@@ -35,7 +35,7 @@ h2 {
   font-size: 1.2rem;
   font-weight: 700;
   line-height: 1.4;
-  margin-bottom: 1rem;
+  /* margin-bottom: 1rem; */
 }
 
 h4 {
