--- a/app/styles/reset.css
+++ b/app/styles/reset.css
@@ -27,8 +27,8 @@ h1 {
   font-size: 1.6rem;
   font-weight: 700;
   line-height: 1.4;
-  margin-bottom: 2rem;
-  margin-top: 2rem;
+  /* margin-bottom: 2rem;
+  margin-top: 2rem; */
 }
 
 h2 {
